Fehlersuche. Sprachumschaltung reagiert nicht

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
     "landingPage": {
-      "title": "Willkommen auf meiner Portfolio-Seite!",
-      "subtitle": "Hier findest du Informationen über mich und meine Arbeit."
+      "title": "Welcome to my portfolio page!",
+      "subtitle": "Here you can find information about me and my work."
     },
     "aboutMe": {
       "title": "Über mich"
