--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,7 +1,7 @@
 {
     "landingPage": {
-      "title": "Willkommen auf meiner Portfolio-Seite!",
-      "subtitle": "Hier findest du Informationen über mich und meine Arbeit."
+      "title": "Välkommen till min portföljsida!",
+      "subtitle": "Här kan du hitta information om mig och mitt arbete."
     },
     "aboutMe": {
       "title": "Über mich"
