edit language files

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,7 +1,7 @@
 {
     "landingPage": {
-      "title": "Willkommen auf meiner Portfolio-Seite!",
-      "subtitle": "Hier findest du Informationen über mich und meine Arbeit."
+      "title": "Kay Beckmann",
+      "subtitle": "FRONTEND ENTWICKLER"
     },
     "aboutMe": {
       "title": "Über mich"
