--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
     "landingPage": {
-      "title": "Welcome to my portfolio page!",
-      "subtitle": "Here you can find information about me and my work."
+      "title": "Kay Beckmann",
+      "subtitle": "FRONTEND DEVELOPER"
     },
     "aboutMe": {
       "title": "Über mich"
