--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,7 +1,7 @@
 {
     "landingPage": {
-      "title": "Välkommen till min portföljsida!",
-      "subtitle": "Här kan du hitta information om mig och mitt arbete."
+      "title": "Kay Beckmann",
+      "subtitle": "FRONT END UTVELKARE"
     },
     "aboutMe": {
       "title": "Über mich"
