--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -4,6 +4,9 @@
       "subtitle": "FRONT END UTVELKARE"
     },
     "aboutMe": {
-      "title": "Über mich"
-    }
+      "title": "Über mich",
+      "description":"1",
+      "skill1":"2",
+      "skill2":"3"
+      }
   }
