--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -6,6 +6,7 @@
     "contact":"Kontakt"
   },
   "landingPage": {
+    "intro": "Ich bin",
     "title": "Kay Beckmann",
     "subtitle": "FRONTEND ENTWICKLER"
   },
