--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,7 @@
     "contact":"Contakt"
   },
   "landingPage": {
+    "intro": "I am",
     "title": "Kay Beckmann",
     "subtitle": "FRONTEND DEVELOPER"
   },
