--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -6,6 +6,7 @@
     "contact":"Kontakt"
   },
   "landingPage": {
+    "intro": "Jag är",
     "title": "Kay Beckmann",
     "subtitle": "FRONT END UTVELKARE"
   },
