--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -8,7 +8,8 @@
   "landingPage": {
     "intro": "Ich bin",
     "title": "Kay Beckmann",
-    "subtitle": "FRONTEND ENTWICKLER"
+    "subtitle": "FULLSTACK ENTWICKLER",
+    "talk": "Lass uns reden!"
   },
   "aboutMe": {
     "title": "Über mich",
