--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,8 @@
   "landingPage": {
     "intro": "I am",
     "title": "Kay Beckmann",
-    "subtitle": "FRONTEND DEVELOPER"
+    "subtitle": "FULLSTACK DEVELOPER",
+    "talk": "Let's talk!"
   },
   "aboutMe": {
     "title": "About me",
