--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -8,7 +8,8 @@
   "landingPage": {
     "intro": "Jag är",
     "title": "Kay Beckmann",
-    "subtitle": "FRONT END UTVELKARE"
+    "subtitle": "FULLSTACK-UTVECKLARE",
+    "talk": "Låt oss prata!"
   },
   "aboutMe": {
     "title": "Om mig",
