add impressum and dsgvo.

--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -25,7 +25,7 @@
     {
       "title":"Join",
       "description":"Uppgiftshantering",
-      "url":"https://projekt.beckmann-md.de"
+      "url":"https://kay-beckmann.developerakademie.net/join/html/summary.html"
     },
     {
       "title":"KiTa",
