--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,7 @@
     {
       "title":"Join",
       "description":"Taskmanagement",
-      "url":"https://projekt.beckmann-md.de"
+      "url":"https://kay-beckmann.developerakademie.net/join/html/summary.html"
     },
     {
       "title":"KiTa",
